# wildlife-review-lab

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml
examples/: deepfaune_single_dog_review_manifest.csv  deepfaune_single_dog_review_summary.json  review_manifest.csv
src/wildlife_review_lab/: __init__.py  __main__.py  adapters.py  cli.py  review.py
tests/: test_review.py
